--- a/index.html
+++ b/index.html
@@ -1,26 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!-- <base href="http://127.0.0.1/" /> -->
+		<base href="/" />
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="height=height-width, width=device-width, initial-scale=1" />
 		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		<title>HTML Elements and Attributes</title>
-		<link rel="stylesheet" type="text/css" href="./base.css" />
-		<link rel="stylesheet" type="text/css" href="./layout.css" />
-
-		<style>
-			/* Inline styles */
-			body {
-				font-family: Arial, sans-serif;
-			}
-		</style>
-		<script>
-			// Inline script
-			console.log('HTML Elements and Attributes Test');
-		</script>
+		<link rel="stylesheet" type="text/css" href="css/_base.css" />
+		<link rel="stylesheet" type="text/css" href="css/component/layout.css" />
+		<link rel="icon" type="image/svg+xml" href="icon/logo.svg" />
 	</head>
 
 	<body data-layout id="body">
@@ -29,6 +19,76 @@
 			<a href="#section-two" target="_self" rel="nofollow">Go to Section 2</a>
 		</nav>
 		<div data-layout-content>
+			<noscript><h1>JavaScript is Disabled</h1></noscript>
+
+			<!-- Forms -->
+			<section id="forms">
+				<fieldset>
+					<legend>Radio</legend>
+					<label data-radio for="radio_name_0">
+						<input id="radio_name_0" type="radio" name="radio_name" value="0" />
+						<label for="radio_name_0">zero</label>
+					</label>
+					<hr />
+					<label data-radio for="radio_name_1">
+						<input id="radio_name_1" type="radio" name="radio_name" value="1" />
+						<label for="radio_name_1">one</label>
+					</label>
+				</fieldset>
+
+				<br />
+				<fieldset>
+					<legend>Checkbox</legend>
+					<label data-radio for="checkbox_name_0">
+						<input id="checkbox_name_0" type="checkbox" name="checkbox_0" value="0" />
+						<label for="checkbox_name_0">zero</label>
+					</label>
+					<hr />
+					<label data-radio for="checkbox_name_1">
+						<input id="checkbox_name_1" type="checkbox" name="checkbox_1" value="1" />
+						<label for="checkbox_name_1">one</label>
+					</label>
+				</fieldset>
+				<label for="button_name_1">
+					<input id="button_name_1" type="button" name="button_name" value="Click Me!" />
+				</label>
+
+				<form id="form" action="/submit" method="post" enctype="multipart/form-data">
+					<fieldset id="fieldset">
+						<legend id="legend">Form Legend</legend>
+						<label id="label" for="name">Name:</label>
+						<input id="input" type="text" name="name" required />
+						<input type="button" value="Button" />
+						<input type="checkbox" name="checkbox" />
+						<input type="color" name="color" />
+						<input type="date" name="date" />
+						<input type="datetime-local" name="datetime-local" />
+						<input type="email" name="email" />
+						<input type="file" name="file" />
+						<input type="hidden" name="hidden" />
+						<input type="image" src="submit.png" alt="Submit" />
+						<input type="month" name="month" />
+						<input type="number" name="number" />
+						<input type="password" name="password" />
+						<input type="radio" name="radio" />
+						<input type="range" name="range" />
+						<input type="reset" value="Reset" />
+						<input type="search" name="search" />
+						<input type="submit" value="Submit" />
+						<input type="tel" name="tel" />
+						<input type="text" name="text" />
+						<input type="time" name="time" />
+						<input type="url" name="url" />
+						<input type="week" name="week" />
+						<textarea id="textarea" rows="4" cols="50">Sample text</textarea>
+						<button id="button" type="button">Click Me</button>
+						<select id="select" name="select">
+							<option value="1">Option 1</option>
+							<option value="2">Option 2</option>
+						</select>
+					</fieldset>
+				</form>
+			</section>
 			<!-- Content sectioning -->
 			<address id="address">
 				123 Example St.<br />
@@ -76,7 +136,7 @@
 				<h2>Section</h2>
 				<p>Represents a section in a document.</p>
 			</section>
-			<div style="display: none">
+			<div>
 				<!-- Text content -->
 				<blockquote id="blockquote" cite="https://example.com">
 					<p>Example blockquote</p>
@@ -197,43 +257,6 @@
 						</tr>
 					</tfoot>
 				</table>
-
-				<!-- Forms -->
-				<form id="form" action="/submit" method="post" enctype="multipart/form-data">
-					<fieldset id="fieldset">
-						<legend id="legend">Form Legend</legend>
-						<label id="label" for="name">Name:</label>
-						<input id="input" type="text" name="name" required />
-						<input type="button" value="Button" />
-						<input type="checkbox" name="checkbox" />
-						<input type="color" name="color" />
-						<input type="date" name="date" />
-						<input type="datetime-local" name="datetime-local" />
-						<input type="email" name="email" />
-						<input type="file" name="file" />
-						<input type="hidden" name="hidden" />
-						<input type="image" src="submit.png" alt="Submit" />
-						<input type="month" name="month" />
-						<input type="number" name="number" />
-						<input type="password" name="password" />
-						<input type="radio" name="radio" />
-						<input type="range" name="range" />
-						<input type="reset" value="Reset" />
-						<input type="search" name="search" />
-						<input type="submit" value="Submit" />
-						<input type="tel" name="tel" />
-						<input type="text" name="text" />
-						<input type="time" name="time" />
-						<input type="url" name="url" />
-						<input type="week" name="week" />
-						<textarea id="textarea" rows="4" cols="50">Sample text</textarea>
-						<button id="button" type="button">Click Me</button>
-						<select id="select" name="select">
-							<option value="1">Option 1</option>
-							<option value="2">Option 2</option>
-						</select>
-					</fieldset>
-				</form>
 
 				<!-- Interactive elements -->
 				<details id="details">
