improve range styles

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 						>Sectioning Root</a
 					>
 				</h6>
+				<input type="range" name="range" />
 			</section>
 
 			<section id="content_sectioning">
