--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 						>Sectioning Root</a
 					>
 				</h6>
-				<input type="range" name="range" />
 			</section>
 
 			<section id="content_sectioning">
@@ -342,6 +341,10 @@
 					<input type="color" name="color" />
 					<button id="button_name_2" type="button">Button element</button>
 					<input type="submit" value="Submit Input" />
+
+					<input type="range" id="range_input" />
+					<input type="range" min="0" max="100" value="40" step="5" />
+					<input type="range" disabled value="80" />
 					<input type="range" name="range" />
 					<input
 						type="image"
