--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta http-equiv="Pragma" content="no-cache" />
 		<meta http-equiv="Expires" content="0" />
 		<title>HTML Elements and Attributes</title>
-		<link rel="stylesheet" type="text/css" href="css/_base.css" />
+		<link rel="stylesheet" type="text/css" href="css/mod.css" />
 		<link rel="stylesheet" type="text/css" href="css/component/layout.css" />
 		<link rel="icon" type="image/svg+xml" href="icon/logo.svg" />
 	</head>
