add main.css file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta http-equiv="Expires" content="0" />
 		<title>HTML Elements and Attributes</title>
 		<link rel="stylesheet" type="text/css" href="css/base.css" />
-		<link rel="stylesheet" type="text/css" href="app/layout.css" />
+		<link rel="stylesheet" type="text/css" href="app/main.css" />
 		<link rel="icon" type="image/svg+xml" href="icon/logo.svg" />
 	</head>
 
